@@ -98,7 +98,7 @@ var tButtons = [
   			var vm = $('#vboxTabVMSnapshots').data('machine');
   			return (item && $(item).data('state') == 'current' && vm.state != 'RestoringSnapshot' && vm.state != 'LiveSnapshotting' && vm.state != 'DeletingSnapshot');
   		},
-  		'click' : function (callback) {
+  		'click' : function () {
 
   			$('#vboxSnapshotNewImg').attr('src',"images/vbox/" + vboxGuestOSTypeIcon($('#vboxTabVMSnapshots').data('machine').OSTypeId));
 
@@ -127,12 +127,9 @@ var tButtons = [
 	  	  		l.mode = 'save';
 	  	  		l.add('snapshotTake',function(d){
 					if(d && d.progress) {
-						vboxSetLangContext('VBoxSnapshotsWgt');
 						vboxProgress(d.progress,function(){
-							if(callback) callback();
-							else $('#vboxTabVMSnapshots').trigger('refresh');
-						},{},'progress_snapshot_create_90px.png',trans('Take Snapshot'));
-						vboxUnsetLangContext();
+							$('#vboxTabVMSnapshots').trigger('refresh');
+						},{},'progress_snapshot_create_90px.png',trans('Take Snapshot','VBoxSnapshotsWgt'));
 					} else if(d && d.error) {
 						vboxAlert(d.error);
 					}
@@ -242,11 +239,9 @@ var tButtons = [
 	  	  		l.mode = 'save';
 	  	  		l.add('snapshotDelete',function(d){
 					if(d && d.progress) {
-						vboxSetLangContext('VBoxSnapshotsWgt');
 						vboxProgress(d.progress,function(){
 							$('#vboxTabVMSnapshots').trigger('refresh');
-						},{},'progress_snapshot_discard_90px.png',trans('Delete Snapshot'));
-						vboxUnsetLangContext();
+						},{},'progress_snapshot_discard_90px.png',trans('Delete Snapshot','VBoxSnapshotsWgt'));
 					} else if(d && d.error) {
 						vboxAlert(d.error);
 					}
